package EventLib;

public interface HotelEventListener {
    void Notify(HotelEvent event);
}
