@startuml

title __HOTELSIMULATIE's Class Diagram__\n

  namespace Areas {
    abstract class Areas.Area {
    }
  }
  

  namespace Areas {
    class Areas.Cinema {
    }
  }
  

  namespace Areas {
    class Areas.Elevator {
    }
  }
  

  namespace Areas {
    class Areas.Fitness {
    }
  }
  

  namespace Areas {
    class Areas.HotelRoom {
    }
  }
  

  namespace Areas {
    class Areas.Lobby {
    }
  }
  

  namespace Areas {
    class Areas.Restaurant {
    }
  }
  

  namespace Areas {
    class Areas.Stairway {
    }
  }
  

  namespace EventLib {
    class EventLib.HotelEvent {
    }
  }
  

  namespace EventLib {
    interface EventLib.HotelEventListener {
    }
  }
  

  namespace EventLib {
    class EventLib.HotelEventManager {
    }
  }
  

  namespace EventLib {
    enum HotelEventType {
    }
  }
  

  namespace Factories {
    class Factories.AreaFactory {
    }
  }
  

  namespace Factories {
    class Factories.PersonFactory {
    }
  }
  

  namespace GUI {
    class GUI.MainMenu {
    }
  }
  

  namespace Managers {
    class Managers.GridBuilder {
    }
  }
  

  namespace Managers {
    class Managers.HotelManager {
    }
  }
  

  namespace Managers {
    class Managers.SettingBuilder {
    }
  }
  

  namespace Managers {
    class Managers.SimulationTimer {
    }
  }
  

  namespace Persons {
    class Persons.Cleaner {
    }
  }
  

  namespace Persons {
    class Persons.Guest {
    }
  }
  

  namespace Persons {
    abstract class Persons.Person {
    }
  }
  

  namespace Scenes {
    class Scenes.MainMenuScene {
    }
  }
  

  namespace Scenes {
    class Scenes.SettingsScene {
    }
  }
  

  namespace Scenes {
    class Scenes.SimulationScene {
    }
  }
  

  namespace ShortestPath {
    class ShortestPath.Dijkstra {
    }
  }
  

  namespace ShortestPath {
    class ShortestPath.Node {
    }
  }
  

  namespace simple {
    class simple.ItemList {
    }
  }
  

  namespace simple {
    class simple.JSONArray {
    }
  }
  

  namespace simple {
    interface simple.JSONAware {
    }
  }
  

  namespace simple {
    class simple.JSONObject {
    }
  }
  

  namespace simple {
    interface simple.JSONStreamAware {
    }
  }
  

  namespace simple {
    class simple.JSONValue {
    }
  }
  

  namespace simple {
    namespace parser {
      interface simple.parser.ContainerFactory {
      }
    }
  }
  

  namespace simple {
    namespace parser {
      interface simple.parser.ContentHandler {
      }
    }
  }
  

  namespace simple {
    namespace parser {
      class simple.parser.JSONParser {
      }
    }
  }
  

  namespace simple {
    namespace parser {
      class simple.parser.ParseException {
      }
    }
  }
  

  namespace simple {
    namespace parser {
      class simple.parser.Yylex {
      }
    }
  }
  

  namespace simple {
    namespace parser {
      class simple.parser.Yytoken {
      }
    }
  }
  

  Areas.Area o-- Areas.Area : latest
  Areas.Cinema -up-|> Areas.Area
  Areas.Elevator -up-|> Areas.Area
  Areas.Fitness -up-|> Areas.Area
  Areas.HotelRoom -up-|> Areas.Area
  Areas.Lobby -up-|> Areas.Area
  Areas.Restaurant -up-|> Areas.Area
  Areas.Stairway -up-|> Areas.Area
  EventLib.HotelEvent o-- EventLib.HotelEventType : Type
  EventLib.HotelEventManager .up.|> java.lang.Runnable
  Managers.GridBuilder o-- ShortestPath.Dijkstra : _ds
  Managers.HotelManager .up.|> EventLib.HotelEventListener
  Managers.HotelManager .up.|> java.util.Observer
  Managers.HotelManager o-- ShortestPath.Dijkstra : _ds
  Managers.SimulationTimer -up-|> java.util.Observable
  Persons.Cleaner -up-|> Persons.Person
  Persons.Cleaner o-- Areas.Area : currentRoomToClean
  Persons.Guest -up-|> Persons.Person
  Persons.Person o-- ShortestPath.Dijkstra : _ds
  ShortestPath.Node o-- ShortestPath.Node : latest
  simple.JSONArray .up.|> simple.JSONAware
  simple.JSONArray .up.|> simple.JSONStreamAware
  simple.JSONArray -up-|> java.util.ArrayList
  simple.JSONObject .up.|> java.util.Map
  simple.JSONObject .up.|> simple.JSONAware
  simple.JSONObject .up.|> simple.JSONStreamAware
  simple.JSONObject -up-|> java.util.HashMap
  simple.parser.JSONParser o-- simple.parser.Yylex : lexer
  simple.parser.JSONParser o-- simple.parser.Yytoken : token


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
